--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,3 @@
 <h3>About Us page...</h3>
-<p>I am Saqib Habib Junior Software Engineer Currently working in Gigalabs pvt ltd..</p>
+<p>I am Saqib Habib Junior Software Engineer Currently working at Gigalabs pvt ltd..</p>
 
